tests/dataset/job/compiler/c/q3.error
/tmp/TestCCompiler_JOB_Goldenq3347835022/001/prog.c: In function ‘test_Q3_returns_lexicographically_smallest_sequel_title’:
/tmp/TestCCompiler_JOB_Goldenq3347835022/001/prog.c:238:11: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  238 |       tmp1.len) {
      |           ^
      |           ->
/tmp/TestCCompiler_JOB_Goldenq3347835022/001/prog.c:246:32: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  246 |               .data[i3] != tmp1.data[i3]) {
      |                                ^
      |                                ->
/tmp/TestCCompiler_JOB_Goldenq3347835022/001/prog.c: In function ‘main’:
/tmp/TestCCompiler_JOB_Goldenq3347835022/001/prog.c:287:7: error: conflicting types for ‘allowed_infos’; have ‘int’
  287 |   int allowed_infos = allowed_infos;
      |       ^~~~~~~~~~~~~
/tmp/TestCCompiler_JOB_Goldenq3347835022/001/prog.c:278:15: note: previous definition of ‘allowed_infos’ with type ‘list_string’
  278 |   list_string allowed_infos = list_string_create(8);
      |               ^~~~~~~~~~~~~
/tmp/TestCCompiler_JOB_Goldenq3347835022/001/prog.c:289:7: warning: implicit declaration of function ‘int_create’; did you mean ‘list_int_create’? [-Wimplicit-function-declaration]
  289 |       int_create(keyword.len * movie_keyword.len * movie_info.len * title.len);
      |       ^~~~~~~~~~
      |       list_int_create
/tmp/TestCCompiler_JOB_Goldenq3347835022/001/prog.c:289:25: error: ‘(keyword_t *)&keyword’ is a pointer; did you mean to use ‘->’?
  289 |       int_create(keyword.len * movie_keyword.len * movie_info.len * title.len);
      |                         ^
      |                         ->
/tmp/TestCCompiler_JOB_Goldenq3347835022/001/prog.c:289:45: error: ‘(movie_keyword_t *)&movie_keyword’ is a pointer; did you mean to use ‘->’?
  289 |       int_create(keyword.len * movie_keyword.len * movie_info.len * title.len);
      |                                             ^
      |                                             ->
/tmp/TestCCompiler_JOB_Goldenq3347835022/001/prog.c:289:62: error: ‘(movie_info_t *)&movie_info’ is a pointer; did you mean to use ‘->’?
  289 |       int_create(keyword.len * movie_keyword.len * movie_info.len * title.len);
      |                                                              ^
      |                                                              ->
/tmp/TestCCompiler_JOB_Goldenq3347835022/001/prog.c:289:74: error: ‘(title_t *)&title’ is a pointer; did you mean to use ‘->’?
  289 |       int_create(keyword.len * movie_keyword.len * movie_info.len * title.len);
      |                                                                          ^
      |                                                                          ->
/tmp/TestCCompiler_JOB_Goldenq3347835022/001/prog.c:309:55: warning: passing argument 1 of ‘contains_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  309 |                                      contains_string(k.keyword, "sequel") &&
      |                                                      ~^~~~~~~~
/tmp/TestCCompiler_JOB_Goldenq3347835022/001/prog.c:77:34: note: expected ‘char *’ but argument is of type ‘const char *’
   77 | static int contains_string(char *s, char *sub) {
      |                            ~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq3347835022/001/prog.c:309:75: warning: passing argument 2 of ‘contains_list_string’ makes pointer from integer without a cast [-Wint-conversion]
  309 |                                      contains_string(k.keyword, "sequel") &&
      |                                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~
      |                                                                           |
      |                                                                           int
  310 |                                          mi.info) &&
      |                                          ~~~~~~~                           
/tmp/TestCCompiler_JOB_Goldenq3347835022/001/prog.c:71:54: note: expected ‘char *’ but argument is of type ‘int’
   71 | static int contains_list_string(list_string v, char *item) {
      |                                                ~~~~~~^~~~
/tmp/TestCCompiler_JOB_Goldenq3347835022/001/prog.c:314:15: error: request for member ‘data’ in something not a structure or union
  314 |           tmp4.data[tmp5] = t.title;
      |               ^
/tmp/TestCCompiler_JOB_Goldenq3347835022/001/prog.c:320:7: error: request for member ‘len’ in something not a structure or union
  320 |   tmp4.len = tmp5;
      |       ^
/tmp/TestCCompiler_JOB_Goldenq3347835022/001/prog.c:323:45: error: incompatible type for argument 1 of ‘_min_string’
  323 |       (result_t){.movie_title = _min_string(candidate_titles)}};
      |                                             ^~~~~~~~~~~~~~~~
      |                                             |
      |                                             int
/tmp/TestCCompiler_JOB_Goldenq3347835022/001/prog.c:62:38: note: expected ‘list_string’ but argument is of type ‘int’
   62 | static char *_min_string(list_string v) {
      |                          ~~~~~~~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq3347835022/001/prog.c:333:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  333 |     _json_string(it.movie_title);
      |                  ~~^~~~~~~~~~~~
/tmp/TestCCompiler_JOB_Goldenq3347835022/001/prog.c:82:32: note: expected ‘char *’ but argument is of type ‘const char *’
   82 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq3347835022/001/prog.c:337:68: error: incompatible types when assigning to type ‘list_int’ from type ‘result_t *’
  337 |   test_Q3_returns_lexicographically_smallest_sequel_title_result = result;
      |                                                                    ^~~~~~
